# goit-algo2-hw-10

./: README.md  pyproject.toml
src/: task_1.py
