[project]
name = "goit-algo2-hw-10"
version = "0.1.0"
description = ""
authors = [
    {name = "atoptun",email = "topa1978@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
